--- a/e3-manager-web/pom.xml
+++ b/e3-manager-web/pom.xml
@@ -99,6 +99,12 @@
 			<groupId>com.github.sgroschupf</groupId>
 			<artifactId>zkclient</artifactId>
 		</dependency>
+
+		<!-- mybatis分页插件，引入com.github.pagehelper.Page类，消除ClassNotFound的警告 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+		</dependency>
 	</dependencies>
 
 
@@ -113,6 +119,37 @@
 					<port>8081</port>
 				</configuration>
 			</plugin>
+			<!-- 配置jetty插件，支持热部署 -->
+			<plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>7.4.3.v20110701</version>
+                <configuration>
+                    <!-- 指定端口时，要在setting文件中配置jetty插件 -->
+                    <connectors>
+                        <connector implementation="org.eclipse.jetty.server.bio.SocketConnector">
+                            <port>80</port>
+                            <maxIdleTime>60000</maxIdleTime>
+                        </connector>
+                    </connectors>
+                    <scanIntervalSeconds>1</scanIntervalSeconds>
+                    <reload>manual</reload>
+                    <stopKey>foo</stopKey>
+                    <stopPort>9999</stopPort>
+                    <webAppConfig implementation="org.mortbay.jetty.plugin.JettyWebAppContext">
+                    <!-- 一般是项目名称 -->
+                        <contextPath>${jetty.contextRoot}</contextPath>
+                        <sessionHandler implementation="org.eclipse.jetty.server.session.SessionHandler">
+                            <sessionManager implementation="org.eclipse.jetty.server.session.HashSessionManager">
+                                <!-- 用于存放持久化的session路径 -->
+                                <storeDirectory>target/jetty-sessions</storeDirectory>
+                                <idleSavePeriod>1</idleSavePeriod>
+                            </sessionManager>
+                        </sessionHandler>
+                    </webAppConfig>
+                </configuration>
+            </plugin>
+			
 		</plugins>
 	</build>
 </project>
