--- a/e3-parent/pom.xml
+++ b/e3-parent/pom.xml
@@ -83,7 +83,6 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
-<!-- 				<scope>test</scope> -->
 			</dependency>
 			<!-- 日志处理 -->
 			<dependency>
@@ -228,29 +227,6 @@
 				<version>${freemarker.version}</version>
 			</dependency>
 
-			<!-- dubbo相关 -->
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>dubbo</artifactId>
-				<exclusions>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jboss.netty</groupId>
-						<artifactId>netty</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.zookeeper</groupId>
-				<artifactId>zookeeper</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>com.github.sgroschupf</groupId>
-				<artifactId>zkclient</artifactId>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -285,6 +261,11 @@
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>9.2.21.v20170120</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
