完成商品新增及编辑功能

--- a/e3-manager-web/pom.xml
+++ b/e3-manager-web/pom.xml
@@ -37,6 +37,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- 文件上传组件 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -105,7 +111,6 @@
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
 		</dependency>
-
 	</dependencies>
 
 
