--- a/e3-manager-web/src/main/resources/conf/resource.properties
+++ b/e3-manager-web/src/main/resources/conf/resource.properties
@@ -1,2 +1,3 @@
 # 图片服务器地址
-IMAGE_SERVER_URL=http://192.168.25.133/
+# 采用域名，代替ip地址。单机测试环境时需更改host使192.168.25.133指向img.e3mall.com
+IMAGE_SERVER_URL= http://img.e3mall.com/
