--- a/e3-portal-web/pom.xml
+++ b/e3-portal-web/pom.xml
@@ -11,6 +11,12 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>cn.e3mall</groupId>
+			<artifactId>e3-content-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<!-- JSP相关 -->
 		<dependency>
 			<groupId>jstl</groupId>
