--- a/e3-portal-web/src/main/resources/log4j.properties
+++ b/e3-portal-web/src/main/resources/log4j.properties
@@ -1,5 +1,24 @@
-log4j.rootLogger=ERROR,A1
+### 设置Logger输出级别和输出目的地 ### debug更详细,如果设为info那么打印出的表数据遇到字符串就不显示，此外还有logfile  
+log4j.rootLogger=INFO,Console  
+  
+### 把日志信息输出到控制台 ###   
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.Console.Target=System.out
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+#输出格式
+log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %F %p %m%n
+  
+### 把日志信息输出到文件：jbit.log ###   
+#log4j.appender.logfile=org.apache.log4j.FileAppender   
+#log4j.appender.logfile.File=jbit.log   
+#log4j.appender.logfile.layout=org.apache.log4j.PatternLayout   
+#log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %F %p %m%n   
 
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss,SSS} [%t] [%c]-[%p] %m%n
+###显示SQL语句部分   
+log4j.logger.cn.e3mall.mapper=DEBUG
+log4j.logger.org.apache.ibatis=DEBUG    
+log4j.logger.java.sql=DEBUG  
+log4j.logger.java.sql.Connection=DEBUG  
+log4j.logger.java.sql.Statement=DEBUG  
+log4j.logger.java.sql.PreparedStatement=DEBUG  
+log4j.logger.java.sql.ResultSet=DEBUG  
