--- a/e3-search/e3-search-service/src/main/resources/conf/solr.properties
+++ b/e3-search/e3-search-service/src/main/resources/conf/solr.properties
@@ -1,1 +1,4 @@
-solr.server.url=http://192.168.56.101:8983/solr/core1/
+# solr单机版服务器地址
+solr.server.url=http://192.168.25.100:8983/solr/core1/
+# solr-cloud真集群zookeeper地址
+solr-cloud.server.zkHost=192.168.25.101:2181,192.168.25.102:2181,192.168.25.103:2181
