所有虚拟机服务全面移植到docker，更改相应的服务地址

--- a/e3-manager/e3-manager-service/pom.xml
+++ b/e3-manager/e3-manager-service/pom.xml
@@ -78,5 +78,10 @@
 			<artifactId>zkclient</artifactId>
 		</dependency>
 
+		<!-- 消息队列 -->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+		</dependency>
 	</dependencies>
 </project>
