--- a/e3-search/e3-search-service/src/main/resources/conf/dubbo.properties
+++ b/e3-search/e3-search-service/src/main/resources/conf/dubbo.properties
@@ -1,6 +1,7 @@
 # 注册中心地址
 # 广播方式   multicast://224.5.6.7:1234
-# zooKeeper方式   zookeeper://192.168.25.100:2181
-dubbo.registry.address=zookeeper://192.168.25.100:2181
+# zooKeeper方式   zookeeper://192.168.0.101:2181
+# dubbo.registry.address=zookeeper://192.168.0.101:2181
+dubbo.registry.address=zookeeper://192.168.0.101:2181
 # dubbo, rmi
 dubbo.protocol.name=dubbo
