--- a/e3-search/e3-search-service/pom.xml
+++ b/e3-search/e3-search-service/pom.xml
@@ -82,6 +82,12 @@
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
 		</dependency>
+
+		<!-- 消息队列 -->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+		</dependency>
 	</dependencies>
 
 	<!-- 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 -->
