--- a/e3-common/pom.xml
+++ b/e3-common/pom.xml
@@ -53,10 +53,15 @@
 		</dependency>
 
 		<!-- FastDFS client -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>fastdfs_client</groupId>
 			<artifactId>fastdfs_client</artifactId>
 			<version>1.25</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.csource</groupId>
+			<artifactId>fastdfs-client-java</artifactId>
+			<version>1.27-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Redis客户端 -->
